# subxt_example_codegen

./: Cargo.toml  README.md  type reg
.cargo/: config.toml
src/: context.rs  lib.rs  main.rs  polkadot.rs  wasm_interface.rs
src/values/: dynamic_values.rs  mod.rs  static_values.rs
